--- a/BlazorAppTest/Pages/Counter.razor
+++ b/BlazorAppTest/Pages/Counter.razor
@@ -1,10 +1,10 @@
 ﻿@page "/counter"
 
-<h1>Counter</h1>
+<h1>Sayaç</h1>
 
-<p>Current count: @currentCount</p>
+<p>Şuanki Sayı: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="IncrementCount">Beni tıkla</button>
 
 @code {
     private int currentCount = 0;
